# project-paystub-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  oss_readiness_plan.md  pyproject.toml  requirements.txt  review_feedback.md
.github/workflows/: ci.yml  release.yml
blackbox-reports/09250a9a53f6e07c_20260218T051328Z/: manifest.json
blackbox-reports/09250a9a53f6e07c_20260218T052121Z/: manifest.json
blackbox-reports/09250a9a53f6e07c_20260218T052158Z/: manifest.json
blackbox-reports/b9415444606e0182_20260218T051328Z/: manifest.json
blackbox-reports/b9415444606e0182_20260218T052121Z/: manifest.json
blackbox-reports/b9415444606e0182_20260218T052158Z/: manifest.json
blackbox-reports/b9415444606e0182_20260218T052304Z/: manifest.json
blackbox-reports/b9415444606e0182_20260218T052335Z/: manifest.json
blackbox-reports/b9415444606e0182_20260218T052353Z/: manifest.json
blackbox-reports/b9415444606e0182_20260218T052424Z/: manifest.json
blackbox-reports/fde3402b24c4819d_20260218T054126Z/: manifest.json
blackbox-reports/fde3402b24c4819d_20260218T054144Z/: manifest.json
paystub_analyzer/: __init__.py  annual.py  core.py  filing_rules.py  w2.py  w2_aggregator.py  w2_pdf.py
paystub_analyzer/cli/: analyze.py  annual.py  ui.py  w2_validate.py
paystub_analyzer/schemas/: annual_summary.json  corrections.json  household_config.json  v0_3_0_contract.json  v0_4_0_contract.json  w2_comparison.json
paystub_analyzer/testing/: fixtures.py
paystub_analyzer/ui/: app.py
paystub_analyzer/utils/: console.py  contracts.py  corrections.py  migration.py
project_paystub_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reports/baselines/: v0.4.0.json
scripts/: analyze_payslip_taxes.py  benchmark_accuracy.py  build_tax_filing_package.py  extract_release_notes.py  extract_w2_from_pdf.py  freeze_baseline.py  generate_gold_fixtures.py  generate_smoke_fixture.py  validate_gold_dataset.py  validate_w2_with_paystubs.py
tests/: conftest.py  test_annual.py  test_benchmark_accuracy.py  test_cli_household.py  test_cli_interactive.py  test_cli_pipeline.py  test_cli_w2_validate.py  test_continuity_engine.py  test_contracts.py  test_contracts_output.py  test_contracts_w2.py  test_core.py  test_corrections.py  test_e2e.py  test_e2e_ocr.py  test_e2e_real.py  test_filing_rules.py  test_household.py  test_integration.py  test_integration_household.py  test_reporting.py  test_scripts.py  test_utils_console.py  test_w2_pdf.py
tests/fixtures/gold/: PROVENANCE.md  manifest.json
ui/: app.py
w2_forms/: README.md  w2_template_2025.json
